--- a/docs/stylesheets/style.css
+++ b/docs/stylesheets/style.css
@@ -5,6 +5,9 @@ body { font-family: 'Roboto', sans-serif; }
 h1, h2, h3 {
   font-family: 'Open Sans Condensed';
 }
+ul, ol {
+  line-height: 140%;
+}
 .remark-code, .remark-inline-code {
   font-family: 'Ubuntu Mono';
   border-radius: 3px;
@@ -12,7 +15,7 @@ h1, h2, h3 {
 .remark-inline-code {
   background-color: #ddd;
   padding: 1px 3px;
-  font-size: 80%;
+  font-size: 90%;
 }
 .inverse {
   background-color: #222;
